--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -142,7 +142,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GH_TOKEN2 }}
-          ref: ${{ github.ref }}
+          ref:  ${{ github.head_ref || github.ref }}
 
       - name: 📝 Create image info file
         run: |
